# MetroloPy

./: .gitignore  CITATION.cff  README.md  metrolopy-0.5.0-py3-none-any.whl  pyproject.toml  setup.py
docs/: Makefile  conf.py  hand_made_doc.rst  index.html  index.rst  make.bat  metrolopy.tests.rst  tutorial.ipynb
docs/_build/doctrees/: environment.pickle  hand_made_doc.doctree  index.doctree  metrolopy.doctree  metrolopy.tests.doctree  modules.doctree  todo.doctree
docs/_build/html/: genindex.html  hand_made_doc.html  index.html  metrolopy.html  metrolopy.tests.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  todo.html
docs/_build/html/_downloads/: tutorial.ipynb
docs/_build/html/_sources/: hand_made_doc.rst.txt  index.rst.txt  todo.rst.txt
docs/_build/html/_static/: constants.html  tutorial.html  units.html
docs/_static/: constants.html  tutorial.html  units.html
docs/doctrees/: environment.pickle  metrolopy.doctree  metrolopy.tests.doctree  todo.doctree
docs/html/: genindex.html  hand_made_doc.html  metrolopy.html  metrolopy.tests.html  py-modindex.html  searchindex.js  todo.html
docs/html/_sources/: hand_made_doc.rst.txt  metrolopy.rst.txt  modules.rst.txt
docs/html/_static/: tutorial.html
metrolopy/: __init__.py  alpha_cor.py  budget.py  builtin_constants.py  codata2018.py  constant.py  constcom.py  dfunc.py  distributions.py  exceptions.py  fit.py  functions.py  gummy.py  indexed.py  license.txt  logunit.py  mean.py  miscunits.py  nonlinearunit.py  nummy.py  offsetunit.py  pmethod.py  prefixedunit.py  printing.py  relunits.py  siunits.py  ummy.py  unit.py  unitparser.py  unitutils.py  usunits.py  version.py
metrolopy/tests/: __init__.py  common.py  test_complex.py  test_create.py  test_gummy.py  test_misc.py  test_operations.py  test_ubreakdown.py
src/metrolopy/: __init__.py  __init__.pyi  _constant.py  _gummy.py  _mean.py  _nummy.py  _ummy.py  _unit.py  abc.py  budget.py  builtin_constants.py  constant.py  constcom.py  dfunc.py  distfit.py  distributions.py  dof.py  exceptions.py  fit.py  functions.py  gummy.py  logunit.py  mean.py  mfraction.py  misc.py  miscdistributions.py  miscfit.py  miscunits.py  nonlinearunit.py  nummy.py  offsetunit.py  pmethod.py  polyfit.py  prefixedunit.py  printing.py  quantity.py  relunits.py  siunits.py  ummy.py  unit.py  (+4 more)
src/metrolopy/tests/: __init__.py  test_create.py  test_dist.py  test_fit.py  test_func.py  test_gummy.py  test_misc.py  test_operations.py  test_ubreakdown.py
tests/: __init__.py  test_complex.py  test_create.py  test_gummy.py  test_misc.py  test_operations.py
